[package]
name = "chipstream"
version = "0.1.0"
authors = ["h1romas4 <h1romas4@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["native"] }

[build-dependencies]
embuild = "0.30.4"
anyhow = "1"
